@@ -1,3 +1,7 @@
+2007-02-20  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #4202: be_groups - fields restricted by a low maxitems value
+
 2007-02-20  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Fixed bug #4993: IE 5.5 and Konqueror compatibility for AJAX navtree
